# nitrogen

./: .gitignore  CMakeLists.txt  readme.md
docs/: contributing.md
examples/: block_sample.cpp  blockchain_sample.cpp
src/: main.cpp
src/block/: block.cc  block.cpp  block.h  block.hpp  block_test.cpp
src/block/docs/: block.md
src/blockchain/: blockchain.cpp  blockchain.h  blockchain.hpp
src/p2p/sockets/: nitrogen_client.cpp  nitrogen_client.hpp  nitrogen_server.cpp  nitrogen_server.hpp
src/p2p/sockets/docs/: operability.md
